Increased the size of new list form and prevent very long emails from overflowing the container.

--- a/src/styles/sass/pages/_newList.scss
+++ b/src/styles/sass/pages/_newList.scss
@@ -120,7 +120,7 @@
     }
 
     &-inner {
-        width: calc(min(28rem, 70%));
+        width: calc(min(32rem, 85%));
     }
 }
 
@@ -137,12 +137,24 @@
 }
 
 .inviteeElement {
-    display: flex;
-    flex-direction: row-reverse;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr auto;
+    grid-template-rows: 1;
+    max-width: 100%;
     margin: 0.5rem 0.5rem;
+    gap: 0.2rem;
+
+    &-email {
+        grid-column: 1;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
 
     &-remove {
+        grid-column: 2;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         color: $color-interactive;
         margin-left: 0.25rem;
         cursor: pointer;
